[package]
name = "img-to-ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
time = "0.1"
clap = {version = "*", features = ["derive"]}

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"